openshift/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presentation-factory-frontend
  labels:
    app.kubernetes.io/name: presentation-factory
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/name: presentation-factory
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
